# axum-mysql-docker-template

./: README.md  docker-compose.yml
app/: Cargo.toml  Dockerfile
app/derives/: Cargo.toml
app/derives/src/: lib.rs
app/derives/src/context/: response.rs
app/src/: adopter.rs  context.rs  main.rs  model.rs  ui.rs
app/src/adopter/: transaction.rs
app/src/adopter/transaction/: query.rs  repository.rs
app/src/adopter/user/: query.rs  repository.rs
app/src/context/: adopter.rs  db.rs  exception.rs  response.rs
app/src/model/: transaction.rs
app/src/model/auth/: schema.rs
app/src/model/transaction/: domain.rs  form.rs
app/src/model/user/: domain.rs
app/src/service/: transaction.rs
app/src/ui/: transaction.rs
